Update website title

--- a/website-source/index.html
+++ b/website-source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Antisemitic Hate-Crime Tracker</title>
+    <title>Antisemetism Tracker</title>
     <meta name="description" content="Visualize and track antisemitic hate-crime incidents." />
   </head>
   <body>
